# screen-photo-to-text

./: .gitignore  CMakeLists.txt  README.md  main.cpp
